--- a/DirectorioSCGG/views/Home/Home.html
+++ b/DirectorioSCGG/views/Home/Home.html
@@ -21,7 +21,7 @@
                     <p>...</p>
                     <p>
                         <a href="#addinstitucion" class="btn btn-primary" role="button">Agregar</a>
-                        <a ng-click="ListarInstituciones()" class="btn btn-success" role="button">ver</a>
+                        <a ng-click="listarInstituciones()" class="btn btn-success" role="button">ver</a>
                     </p>
                 </div>
             </div>
