--- a/DirectorioSCGG/views/shared/_MasterPage.html
+++ b/DirectorioSCGG/views/shared/_MasterPage.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="scggApp">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Directorio Informatico</title>
     <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/toastr.min.css">
@@ -11,7 +12,7 @@
 <body>
     <div id="divPrincipal" >
         <div id="header" >
-            <div id="divMenuPrincipal">
+            <div id="divMenuPrincipal" ng-controller="loginController">
                 <nav class="navbar navbar-default" role="navigation">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
@@ -35,19 +36,19 @@
                         </ul>
                             <!--<li><a data-toggle="modal" data-target="#1">Cargos</a></li>-->
                         </ul>
-                        <div ng-controller="loginController">
+                        <div >
                             <ul class="nav navbar-nav navbar-right" id="ul-login" >
                                 <li class="dropdown">
                                     <a href="" class="dropdown-toggle" data-toggle="dropdown"  aria-haspopup="true"><img src="Image/user.png" id="aImg" width="28" height="28"></a>
-                                    <ul id="login-ul" class="dropdown-menu" >
+                                    <ul id="login-ul" class="dropdown-menu login-ul" >
                                         <div id="divFormLogin">
                                             <li>
                                                 <div id="formLogin">
-                                                    <div id="imgLogin">
+                                                    <div id="imgLogin" class="imgLogin">
                                                         <img src="Image/login.ico" alt="">    
                                                     </div>
                                                     <div >
-                                                        <form class="form" ng-submit="iniciarSesion(correo, password)">
+                                                        <form class="form" >
                                                             <div class="form-group">
                                                                 <label class="sr-only" for="txtCorreo"><b>Correo</b></label>
                                                                 <input id="txtCorreo" type="email" class="form-control" placeholder="Correo Electronico" required="true" ng-model="correo" ng-show="!logeado">
@@ -58,7 +59,7 @@
                                                                 <input id="txtPassword" type="password" class="form-control" placeholder="Contraseña" required="true" ng-model="password" ng-show="!logeado" value="">         
                                                             </div>
                                                             <span class="psw" ng-show="!logeado">¿Olvido su <a href="" id="linkResetPass" data-toggle="modal" data-target="#resetPassModal">contraseña?</a></span>
-                                                            <button type="submit" id="btnLogin" class="btn btn-primary btn-block"  ng-show="!logeado">Login</button>
+                                                            <button type="submit" id="btnLogin" class="btn btn-primary btn-block" ng-click="iniciarSesion(correo, password)"  ng-show="!logeado">Login</button>
                                                             <button type="submit" id="btnLogout" class="btn btn-danger btn-block" ng-click="cerrarSesion()" ng-show="logeado">Cerrar Sesion</button> 
                                                         </form>
                                                     </div> 
@@ -131,5 +132,6 @@
 <script src="js/appService/scggService.js"></script>
 <script src="js/angularControllers/LoginController.js"></script>
 <script src="js/angularControllers/homeController.js"></script>
+<script src="js/angularControllers/institucionesController.js"></script>
 </html>
 
