--- a/DirectorioSCGG/views/shared/_MasterPage.html
+++ b/DirectorioSCGG/views/shared/_MasterPage.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="css/toastr.min.css">
     <link rel="stylesheet" href="css/style/customStyle.css">
     <link rel="stylesheet" href="css/style/mainMenu.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet"> 
+    <base href="http://localhost:8080/DirectorioSCGG/" >
 </head>
 <body>
-    <div id="divPrincipal" >
+    <div id="divPrincipal" ng-controller="indexController">
         <div id="header" >
-            <div id="divMenuPrincipal" ng-controller="loginController">
+            <div id="divMenuPrincipal" ng-controller="indexController">
                 <nav class="navbar navbar-default" role="navigation">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
@@ -22,21 +24,20 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><img id="imgLogo" src="Image/gd_logo.png" width="180px" height="45px"></a>
+                        <a class="navbar-brand" href="" ng-click="home()"><img id="imgLogo" src="Image/gd_logo.png" width="180px" height="45px"></a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <nav class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li><a href="#inst">Instituciones</a></li>
-                            <li><a href="#cargos">Cargos</a></li>
-                            <li><a href="#empleados">Empleados</a></li>
-                            <li><a href="#departamentos">Departamentos</a></li>
-                            <li><a href="#user">Usuarios</a></li>
-                            <li><a href="#rol">Roles</a></li>
+                            <li><a href="#Instituciones" class="a">Instituciones</a></li>
+                            <li ng-show="logeado && rol == 1 || rol == 2"><a href="#Cargos" class="a">Cargos</a></li>
+                            <li ng-show="logeado && rol == 1 || rol == 2"><a href="#Empleados" class="a">Empleados</a></li>
+                            <li ng-show="logeado && rol == 1 || rol == 2"><a href="#Departamentos" class="a">Departamentos</a></li>
+                            <li ng-show="logeado && rol == 1 || rol == 2"><a href="#Usuarios" class="a">Usuarios</a></li>
+                            <li ng-show="logeado && rol == 1 || rol == 2"><a href="#Roles" class="a">Roles</a></li>
                         </ul>
                             <!--<li><a data-toggle="modal" data-target="#1">Cargos</a></li>-->
-                        </ul>
-                        <div >
+                        <div>
                             <ul class="nav navbar-nav navbar-right" id="ul-login" >
                                 <li class="dropdown">
                                     <a href="" class="dropdown-toggle" data-toggle="dropdown"  aria-haspopup="true"><img src="Image/user.png" id="aImg" width="28" height="28"></a>
@@ -69,42 +70,6 @@
                                     </ul>
                                 </li>
                             </ul>
-                            <div class="modal fade"  role="dialog" aria-labelledby="myModalLabel" tabindex="-1" id="resetPassModal">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                          <h4 class="modal-title">Restablecer Contraseña</h4>
-                                        </div>
-                                        <div class="modal-body" >
-                                            <form class="form-horizontal" name="resetPass">
-                                                <div class="form-group" ng-class="{'has-error': resetPass.correo.$invalid && resetPass.correo.$dirty}">
-                                                    <label for="txtConfirmCorreo" class="col-sm-4 control-label">Correo Electronico</label> 
-                                                    <div class="col-sm-5">
-                                                        <input type="email" class="form-control danger" id="txtConfirmCorreo" placeholder="Correo Electronico" ng-model="correo" required="true" value="" name="correo">    
-                                                    </div>
-                                                </div> 
-                                                <div class="form-group" ng-class="{'has-error': resetPass.pass1.$invalid && resetPass.pass1.$dirty}"> 
-                                                    <label for="txtNewPass" class="col-sm-4 control-label">Nueva Contraseña</label>
-                                                    <div class="col-sm-5">
-                                                        <input type="password" class="form-control" id="txtNewPass" placeholder="Nueva contraseña" ng-model="pass1" required="true" value=""  name="pass1">
-                                                     </div> 
-                                                </div>
-                                                <div class="form-group" ng-class="{'has-error': resetPass.pass2.$invalid && resetPass.pass2.$dirty}"> 
-                                                    <label for="txtConfirmPass" class="col-sm-4 control-label">Confirmar Contraseña</label> 
-                                                    <div class="col-sm-5">
-                                                        <input type="password" class="form-control" id="txtConfirmPass" placeholder="Confirmar Contraseña" ng-model="pass2" required="true" value="" name="pass2"> 
-                                                    </div>
-                                                </div> 
-                                                <button type="submit" class="btn btn-success aling-rigt"  ng-click="resetPassword(correo, pass1, pass2)" >Confirmar</button>
-                                          </form>
-                                        </div>
-                                        <div class="modal-footer">
-                                            
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </nav>
                 </nav>
@@ -120,7 +85,7 @@
     </footer>
 </body>
 <script src="js/public/jquery.min.js"></script>
-<script src="js/public/jquery-2.2.3.intellisense.js"></script>
+<!-- <script src="js/public/jquery-2.2.3.intellisense.js"></script>-->
 <script src="js/public/angular.min.js"></script>
 <script src="js/public/angular-route.js"></script>
 <script src="js/public/bootstrap.min.js"></script>
@@ -130,7 +95,7 @@
 <script src="js/angularControllers/routeController.js"></script>
 <script src="js/appFactories/scggFactory.js"></script>
 <script src="js/appService/scggService.js"></script>
-<script src="js/angularControllers/LoginController.js"></script>
+<script src="js/angularControllers/indexController.js"></script>
 <script src="js/angularControllers/homeController.js"></script>
 <script src="js/angularControllers/institucionesController.js"></script>
 </html>
