--- a/DirectorioSCGG/css/style/customStyle.css
+++ b/DirectorioSCGG/css/style/customStyle.css
@@ -12,6 +12,8 @@ body {
 .a{
     color: #FFFFFF;
     margin: 0.1em 0.1em 0.1em 0.1em;
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.032em;
 }
 
 .homeImage {
@@ -85,6 +87,9 @@ body {
     margin-bottom: 0.8em;
 }
 
+.FormCreate {
+    margin: 2em 2em 2em 2em;
+}
 /* Full-width input fields */
 /*input[type=text], input[type=password] {
     width: 100%;
