--- a/DirectorioSCGG/views/Home/Home.html
+++ b/DirectorioSCGG/views/Home/Home.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotronColor" ng-controller="homeController">
+<div class="jumbotron jumbotronColor" ng-controller="homeController" ng-init="validarLogin()"> 
     <div class="row divRow">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail thumbnailShadown">
@@ -20,7 +20,7 @@
                     <h3>INSTITUCIONES</h3>
                     <p>...</p>
                     <p>
-                        <a href="#addinstitucion" class="btn btn-primary" role="button">Agregar</a>
+                        <a class="btn btn-primary" role="button" data-toggle="modal" data-target="#AddInst">Agregar</a>
                         <a ng-click="listarInstituciones()" class="btn btn-success" role="button">ver</a>
                     </p>
                 </div>
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4" ng-show="rol == 1">
             <div class="thumbnail thumbnailShadown">
                 <img src="Image/roles.png" alt="..." style=" height:192.52px;">
                 <div class="caption captionIcon" align="center">
@@ -80,5 +80,14 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>   
 </div>
+<div>
+    <div ng-controller="instController" ng-include="'views/PartialViews/AddInstitucion_PartialView.html'"></div>
+    <div ng-include="'views/PartialViews/AddCargo_PartialView.html'"></div>
+    <div ng-include="'views/PartialViews/AddEmpleado_PartialView.html'"></div>
+    <div ng-include="'views/PartialViews/AddUsuario_PartialView.html'"></div>
+    <div ng-include="'views/PartialViews/AddDepartamento_PartialView.html'"></div>
+</div>
+
+
